; ModuleID = '/home/carl/AnghaBench/git/ewah/extr_bitmap.c_bitmap_reset.c'
source_filename = "/home/carl/AnghaBench/git/ewah/extr_bitmap.c_bitmap_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bitmap = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bitmap_reset(%struct.bitmap* %0) #0 {
  %2 = alloca %struct.bitmap*, align 8
  store %struct.bitmap* %0, %struct.bitmap** %2, align 8
  %3 = load %struct.bitmap*, %struct.bitmap** %2, align 8
  %4 = getelementptr inbounds %struct.bitmap, %struct.bitmap* %3, i32 0, i32 1
  %5 = load i32, i32* %4, align 4
  %6 = load %struct.bitmap*, %struct.bitmap** %2, align 8
  %7 = getelementptr inbounds %struct.bitmap, %struct.bitmap* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = sext i32 %8 to i64
  %10 = mul i64 %9, 4
  %11 = trunc i64 %10 to i32
  %12 = call i32 @memset(i32 %5, i32 0, i32 %11)
  ret void
}

declare dso_local i32 @memset(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
